# easy-webfinger

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  readme.md
.github/: renovate.json5
.github/workflows/: release-please.yml  release.yml  rust.yml
src/: main.rs
